--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -48,7 +48,7 @@
   padding-inline: 20px 0;
 
   @media (min-width: $tablet-width) {
-    padding-inline: 21px 0;
+    padding-inline: 13px 6px;
   }
 
   @media (min-width: $desktop-width) {
