--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -8,7 +8,8 @@
 
   @media (min-width: $desktop-width) {
     padding: 0;
-    padding-bottom: 69px;
+    padding-bottom: 60px;
+    border: none;
   }
 }
 
@@ -19,6 +20,10 @@
 
   @media (min-width: $tablet-width) {
     row-gap: 32px;
+  }
+
+  @media (min-width: $desktop-width) {
+    row-gap: 30px;
   }
 }
 
@@ -57,6 +62,11 @@
     @include common-text-tablet;
     padding-right: 21px;
   }
+
+  @media (min-width: $tablet-width) {
+    @include common-text-tablet;
+    padding-right: 0;
+  }
 }
 
 .advantages__text br {
@@ -81,7 +91,7 @@
 
   @media (min-width: $desktop-width) {
     grid-template-columns: repeat(4, 1fr);
-    column-gap: 84px;
+    column-gap: 81px;
     min-height: 280px;
   }
 }
@@ -249,6 +259,10 @@
     @media (min-width: $tablet-width) {
       top: -83px;
       left: 28px;
+    }
+
+    @media (min-width: $desktop-width) {
+      left: 27px;
     }
   }
 }
