--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -17,6 +17,7 @@
 }
 
 .footer__container {
+
   background-color: transparent;
 
   @media (min-width: $desktop-width) {
@@ -29,6 +30,10 @@
 .footer__address {
   background-color: $base-white;
   display: grid;
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .footer__address--background {
@@ -56,11 +61,11 @@
   }
 
   @media (min-width: $desktop-width) {
-    column-gap: 87px;
+    column-gap: 96px;
     background-color: #ffffff;
     margin: 0;
-    padding-left: 70px;
-    padding-right: 70px;
+    padding-left: 79px;
+    padding-right: 85px;
   }
 }
 
@@ -90,6 +95,11 @@
   @media (min-width: $tablet-width) {
     font-size: 16px;
     text-align: right;
+  }
+
+  @media (min-width: $tablet-width) {
+    text-align: left;
+    padding-bottom: 6px;
   }
 }
 
@@ -161,6 +171,6 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 40px 20px;
+    padding: 66px 0;
   }
 }
