--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -22,6 +22,10 @@
     font-size: 18px;
     line-height: 24px;
   }
+
+  @media (min-width: $desktop-width) {
+    column-gap: 21px;
+  }
 }
 
 .main-nav__item {
@@ -54,6 +58,7 @@
   @media (min-width: $desktop-width) {
     font-size: 20px;
     line-height: 30px;
+    padding-inline: 13px 0;
   }
 
   &:hover {
@@ -130,7 +135,7 @@
     content: "";
     position: relative;
     display: block;
-    bottom: -4px;
+    bottom: -6px;
     width: 100%;
     height: 2px;
     border-bottom: 2px solid $base-white;
