--- a/source/styles/blocks/main.scss
+++ b/source/styles/blocks/main.scss
@@ -4,6 +4,10 @@
   @media (min-width: $tablet-width) {
     padding-top: 33px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 0;
+  }
 }
 
 .main__form-container {
