ПП главная полностью готов

--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -97,7 +97,7 @@
     text-align: right;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     text-align: left;
     padding-bottom: 6px;
   }
