ПП каталог мобильная версия

--- a/source/styles/blocks/other-action.scss
+++ b/source/styles/blocks/other-action.scss
@@ -2,10 +2,10 @@
   @include background-green;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   row-gap: 48px;
+  align-items: center;
   min-height: 289px;
+  padding-top: 57px;
   background: linear-gradient(to top, #ffffff 0, rgba(104, 183, 56, 0.85) 0), image-set(url("../../images/promo-bg-mobile@1x.jpg") type("image/jpg") 1x, url("../../images/promo-bg-mobile@2x.jpg") type("image/jpg") 2x, url("../../images/promo-bg-mobile@1x.webp") type("image/webp") 1x, url("../../images/promo-bg-mobile@2x.webp") type("image/webp") 2x) center no-repeat;
 
   @media (min-width: $tablet-width) {
