--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -12,7 +12,7 @@
 
 .catalog__container {
   display: grid;
-  padding-top: 21px;
+  padding-top: 27px;
   gap: 41px;
 
 
@@ -30,7 +30,8 @@
 .catalog__title {
   @include common-title;
   text-align: center;
-  margin: 0;
+  margin-block: 0;
+  margin-inline: 0 21px;
 
   @media (min-width: $tablet-width) {
     @include common-title-big;
@@ -42,7 +43,7 @@
 .catalog__list {
   @include list-reset;
   display: grid;
-  gap: 25px;
+  gap: 24px;
 
   @media (min-width: $tablet-width) {
     gap: 141px 60px;
@@ -77,7 +78,7 @@
 }
 
 .catalog__product-info {
-  @include product-info;
+  @include catalog-product-info;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column: 1 / 3;
@@ -105,6 +106,7 @@
 .catalog--other {
   border: none;
   position: relative;
+  padding-bottom: 12px;
 }
 
 .catalog__title--other {
@@ -172,7 +174,7 @@
 
 .catalog__item--other {
   display: grid;
-  row-gap: 15px;
+  row-gap: 11px;
   align-items: center;
   padding: 13px 0 19px;
   box-shadow: 0 -1px 0 0 $special-gray;
@@ -197,8 +199,8 @@
 
 .catalog__other {
   display: grid;
-  gap: 25px;
-  padding-block: 25px;
+  gap: 36px;
+  padding-block: 23px;
   margin: auto;
   width: 280px;
   position: relative;
