--- a/source/styles/mixins.scss
+++ b/source/styles/mixins.scss
@@ -120,6 +120,14 @@
   line-height: 16px;
 }
 
+@mixin catalog-product-info {
+  color: $dark-gray;
+  font-family: "Lato", "Verdana", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 14px;
+}
+
 @mixin product-text-tablet {
   font-size: 12px;
   line-height: 16px;
