--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -7,8 +7,7 @@
   color: $base-white;
   text-transform: uppercase;
   width: 100%;
-  padding-top: 12px;
-  padding-bottom: 10px;
+  padding-block: 10px;
   text-align: center;
 
   &:focus-visible {
