--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -3,6 +3,7 @@
 
   @media (min-width: $tablet-width) {
     border: none;
+    padding-bottom: 70px;
   }
 
   @media (min-width: $desktop-width) {
@@ -87,6 +88,9 @@
   @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 20px;
+    grid-column: 2 / 3;
+    grid-template-columns: 1fr auto;
+    column-gap: 52px;
   }
 
   @media (min-width: $desktop-width) {
@@ -97,6 +101,10 @@
 .catalog__product-info dd {
   padding: 0;
   margin: 0;
+
+  @media (min-width: $tablet-width) {
+    text-align: right;
+  }
 }
 
 .catalog__product-definition {
@@ -107,6 +115,10 @@
   border: none;
   position: relative;
   padding-bottom: 12px;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 74px;
+  }
 }
 
 .catalog__title--other {
@@ -118,6 +130,10 @@
   font-size: 24px;
   line-height: 24px;
   justify-self: left;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 6px;
+  }
 
   &::after {
     content: "";
@@ -131,7 +147,7 @@
     box-shadow: 100vw 0 0 0 $base-green;
 
     @media (min-width: $tablet-width) {
-      top: 25px;
+      top: 21px;
     }
   }
 
@@ -180,8 +196,11 @@
   box-shadow: 0 -1px 0 0 $special-gray;
 
   @media (min-width: $tablet-width) {
-    padding: 26px 38px;
+    grid-template-columns: repeat(2, 1fr);
+    padding-block: 26px 28px;
+    padding-inline: 38px;
     box-shadow: 0 -1px 0 0 $special-gray, inset 0 0 0 0 $special-gray;
+    row-gap: 25px;
 
     &:last-child {
       border-bottom: none;
@@ -207,8 +226,8 @@
 
   @media (min-width: $tablet-width) {
     width: 708px;
-    padding-block: 70px;
-    gap: 80px;
+    padding-block: 0;
+    gap: 74px;
   }
 
   @media (min-width: $desktop-width) {
