--- a/source/styles/blocks/other-action.scss
+++ b/source/styles/blocks/other-action.scss
@@ -15,6 +15,7 @@
     min-height: 200px;
     background-position: center -317px;
     background-size: cover;
+    margin-top: -4px;
   }
 
   @media (min-width: $desktop-width) {
