--- a/source/styles/blocks/other-action.scss
+++ b/source/styles/blocks/other-action.scss
@@ -11,11 +11,13 @@
   @media (min-width: $tablet-width) {
     flex-direction: row;
     text-align: start;
-    column-gap: 276px;
+    column-gap: 265px;
     min-height: 200px;
-    background-position: center -317px;
+    background-position: center -326px;
     background-size: cover;
     margin-top: -4px;
+    padding-top: 0;
+    padding-left: 79px;
   }
 
   @media (min-width: $desktop-width) {
