--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -150,6 +150,10 @@
     @media (min-width: $tablet-width) {
       top: 21px;
     }
+
+    @media (min-width: $desktop-width) {
+      top: 23px;
+    }
   }
 
   @media (min-width: $tablet-width) {
@@ -160,6 +164,7 @@
 
   @media (min-width: $desktop-width) {
     grid-column: 1 / 3;
+    padding-left: 0;
   }
 }
 
@@ -211,7 +216,7 @@
   @media (min-width: $desktop-width) {
     grid-template-columns: repeat(3, 1fr);
     column-gap: 40px;
-    padding-block: 15px;
+    padding-block: 16px;
     padding-inline: 0;
     box-shadow: 0 -1px 0 0 $special-gray, inset 0 -1px 0 0 $special-gray;
   }
@@ -232,8 +237,9 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 1280px;
+    width: 1220px;
     grid-template-columns: 1fr 245px;
+    gap: 75px 80px;
   }
 }
 
