--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -15,10 +15,9 @@
 .product__container {
   width: 280px;
   margin: auto;
-  padding-top: 19px;
+  padding-top: 10px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 4px;
 
   @media (min-width: $tablet-width) {
     grid-template-rows: 162px auto auto 1fr;
@@ -57,6 +56,7 @@
 .product__link {
   @include link-reset;
   color: $base-black;
+  padding-top: 9px;
 
   @media (min-width: $tablet-width) {
     text-align: center;
@@ -89,12 +89,13 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column: 2 / 3;
+  margin: 0;
+  padding-block: 19px;
 
   @media (min-width: $tablet-width) {
     @include product-info-tablet;
     grid-column: 1 / 3;
     row-gap: 10px;
-    margin: 0;
     padding-block: 25px 32px;
   }
 
@@ -125,9 +126,14 @@
   }
 }
 
+.product__info-item dd {
+  margin: 0;
+  text-align: right;
+}
+
 .product__button {
   grid-column: 1 / 3;
-  grid-row: 4 / 5;
+  grid-row: 4 / 3;
 
   &:hover {
     background-color: $dark-green;
