--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -48,7 +48,7 @@
   gap: 24px;
 
   @media (min-width: $tablet-width) {
-    gap: 140px 60px;
+    gap: 141px 60px;
     grid-template-columns: repeat(2, 1fr);
   }
 
@@ -81,17 +81,19 @@
 
 .catalog__product-info {
   @include catalog-product-info;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   grid-column: 1 / 3;
   margin: 0;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 20px;
+    justify-content: flex-end;
     grid-column: 2 / 3;
-    grid-template-columns: 1fr auto;
-    column-gap: 52px;
+    column-gap: 51px;
+    padding-top: 2px;
   }
 
   @media (min-width: $desktop-width) {
@@ -206,7 +208,7 @@
     padding-block: 26px 28px;
     padding-inline: 38px;
     box-shadow: 0 -1px 0 0 $special-gray, inset 0 0 0 0 $special-gray;
-    row-gap: 25px;
+    row-gap: 23px;
 
     &:last-child {
       border-bottom: none;
