--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -20,7 +20,7 @@
   grid-template-columns: repeat(2, 1fr);
 
   @media (min-width: $tablet-width) {
-    grid-template-rows: 162px auto auto 1fr;
+    grid-template-rows: 147px auto auto 1fr;
     padding-top: 0;
     padding-block-end: 40px;
     padding-inline: 15px;
@@ -62,7 +62,8 @@
     text-align: center;
     grid-row: 2 / 3;
     grid-column: 1 / 3;
-    padding-inline: 65px;
+    padding-top: 15px;
+    padding-inline: 60px;
   }
 
   @media (min-width: $desktop-width) {
@@ -96,7 +97,7 @@
     @include product-info-tablet;
     grid-column: 1 / 3;
     row-gap: 10px;
-    padding-block: 25px 32px;
+    padding-block: 20px 31px;
   }
 
   @media (min-width: $desktop-width) {
@@ -141,6 +142,11 @@
 
   &:active {
     color: rgb(255, 255, 255, 0.3);
+  }
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / 3;
+    grid-row: 4 / 4;
   }
 }
 
