--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -1,7 +1,7 @@
 .form {
   border-top: 1px solid $light-special-gray;
   text-align: left;
-  padding-block: 27px 32px;
+  padding-block: 27px 0;
 
   &::before {
     content: "";
@@ -10,7 +10,7 @@
     height: 1px;
     background-color: $light-special-gray;
     position: absolute;
-    top: 457px;
+    top: 427px;
   }
 
   &::after {
@@ -20,7 +20,7 @@
     height: 1px;
     background-color: $light-special-gray;
     position: absolute;
-    top: 614px;
+    top: 584px;
   }
 
   @media (min-width: $tablet-width) {
@@ -102,8 +102,8 @@
 }
 
 .form__text-input {
-  margin-left: 13px;
-  padding: 14px 15px;
+  margin-left: 16px;
+  padding: 11px 13px;
   border: 1px solid $very-light-gray;
   font-family: inherit;
   font-size: 16px;
@@ -202,7 +202,7 @@
   border: none;
   margin: 0;
   padding-inline: 0;
-  padding-block: 22px 19px;
+  padding-block: 18px 19px;
 
   @media (min-width: $tablet-width) {
     box-shadow: 0 0 0 1px $very-light-gray;
@@ -247,7 +247,7 @@
   border: none;
   margin: 0;
   padding-inline: 0;
-  padding-block: 0 23px;
+  padding-block: 0 19px;
 
   @media (min-width: $tablet-width) {
     padding-bottom: 65px;
@@ -351,7 +351,7 @@
   width: 100%;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-bottom: 21px;
+  margin-bottom: 15px;
   cursor: pointer;
 
   &:hover {
@@ -380,7 +380,7 @@
     z-index: -1;
     width: 100vw;
     height: 2px;
-    top: 15px;
+    top: 13px;
     right: 0;
     box-shadow: 100vw 0 0 0 $base-green;
 
@@ -451,7 +451,7 @@
     }
   }
 
-  padding: 11px 15px;
+  padding: 10px 15px;
   margin-left: 13px;
   border: 1px solid $very-light-gray;
   font-family: inherit;
@@ -508,7 +508,7 @@
   position: relative;
   background-color: $base-white;
   box-shadow: -20px 0 0 0 $base-white, 20px 0 0 0 $base-white;
-  margin-bottom: 34px;
+  margin-bottom: 33px;
 
   &::after {
     content: "";
@@ -533,8 +533,8 @@
 
 .form__checkbox-input {
   margin: 0;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   background-color: $base-white;
   border: 1px solid $special-gray;
   appearance: none;
