--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -1,10 +1,6 @@
 .promo {
   padding-block: 27px 20px;
 
-  @media (min-width: $tablet-width) {
-    padding-block: 27px 0;
-  }
-
   &::before {
     content: "";
     display: block;
@@ -39,12 +35,12 @@
   }
 
   @media (min-width: $tablet-width) {
-    background: none;
-    padding-top: 0;
+    padding-block: 32px 0;
   }
 
+
   @media (min-width: $desktop-width) {
-    padding-bottom: 266px;
+    padding-block: 25px 266px;
   }
 }
 
@@ -61,7 +57,7 @@
   @media (min-width: $desktop-width) {
     grid-template-rows: 160px 72px 54px;
     grid-template-columns: 80px 1fr 1fr;
-    padding-top: 98px;
+    padding-top: 11px;
     margin-bottom: 80px;
   }
 }
@@ -85,12 +81,13 @@
     color: #000000;
     grid-column: 2 / 4;
     margin-left: 90px;
-    margin-bottom: 20px;
+    margin-bottom: 18px;
   }
 
   @media (min-width: $desktop-width) {
     grid-column: 2;
     margin-left: 0;
+    margin-bottom: 20px;
   }
 }
 
@@ -101,7 +98,7 @@
   line-height: 14px;
   text-transform: uppercase;
   margin: 0;
-  padding-block: 23px;
+  padding-block: 25px 17px;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
@@ -111,7 +108,8 @@
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     margin-left: 90px;
-    margin-bottom: 20px;
+    margin-bottom: 17px;
+    padding-block: 23px;
   }
 
   @media (min-width: $desktop-width) {
@@ -125,9 +123,10 @@
   display: block;
   margin: auto;
   padding-top: 8px;
+  padding-block: 12px 3px;
 
   @media (min-width: $tablet-width) {
-    padding-top: 0;
+    padding-block: 0;
     margin-top: -20px;
     grid-column: 2 / 3;
     grid-row: 3 / 5;
