--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -545,7 +545,8 @@
     }
   }
 
-  padding: 10px 15px;
+  padding-block: 10px;
+  padding-inline: 15px 37px;
   margin-left: 13px;
   border: 1px solid $very-light-gray;
   font-family: inherit;
@@ -563,7 +564,8 @@
   @media (min-width: $tablet-width) {
     @include common-text-big;
     margin-left: 15px;
-    padding: 10px 18px;
+    padding-block: 10px;
+    padding-inline: 15px 37px;
   }
 }
 
