Исправлено замечание отсутствие браузерного фокуса у иконок соц.сетей.

--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -110,12 +110,13 @@
 .footer__dev {
   @include link-reset;
   display: flex;
-  padding: 0 0 40px;
+  margin: 20px 0 40px;
+  padding: 0;
   justify-content: center;
 
   @media (min-width: $tablet-width) {
     gap: 23px;
-    padding: 0;
+    margin: 0;
   }
 }
 
